// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
Array [
  <Tabs
    role="tablist"
    testId="cf-ui-tabs"
  >
    <div
      className="Tabs"
      data-test-id="cf-ui-tabs"
      role="tablist"
    >
      <Tab
        disabled={false}
        id="first"
        onKeyPress={[Function]}
        onSelect={[Function]}
        selected={false}
        tabIndex={0}
        testId="cf-ui-tab"
      >
        <div
          aria-controls="first"
          aria-selected={false}
          className="Tab"
          data-test-id="cf-ui-tab"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          First
        </div>
      </Tab>
      <Tab
        disabled={false}
        id="second"
        onKeyPress={[Function]}
        onSelect={[Function]}
        selected={false}
        tabIndex={0}
        testId="cf-ui-tab"
      >
        <div
          aria-controls="second"
          aria-selected={false}
          className="Tab"
          data-test-id="cf-ui-tab"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          Second
        </div>
      </Tab>
      <Tab
        disabled={false}
        id="third"
        onKeyPress={[Function]}
        onSelect={[Function]}
        selected={false}
        tabIndex={0}
        testId="cf-ui-tab"
      >
        <div
          aria-controls="third"
          aria-selected={false}
          className="Tab"
          data-test-id="cf-ui-tab"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="tab"
          tabIndex={0}
        >
          Third
        </div>
      </Tab>
    </div>
  </Tabs>,
  <TabPanel
    id="first"
    testId="cf-ui-tab-panel"
  >
    <div
      data-test-id="cf-ui-tab-panel"
      id="first"
      role="tabpanel"
    >
      content first panel
    </div>
  </TabPanel>,
  <TabPanel
    id="second"
    testId="cf-ui-tab-panel"
  >
    <div
      data-test-id="cf-ui-tab-panel"
      id="second"
      role="tabpanel"
    >
      content second panel
    </div>
  </TabPanel>,
  <TabPanel
    id="third"
    testId="cf-ui-tab-panel"
  >
    <div
      data-test-id="cf-ui-tab-panel"
      id="third"
      role="tabpanel"
    >
      content third panel
    </div>
  </TabPanel>,
]
`;

exports[`renders the component with role=navigation and an additional class name 1`] = `
<Tabs
  extraClassNames="my-extra-class"
  role="navigation"
  testId="cf-ui-tabs"
>
  <nav
    className="Tabs my-extra-class"
    data-test-id="cf-ui-tabs"
    role="navigation"
  >
    <Tab
      disabled={false}
      href="/first-link"
      id="first"
      onKeyPress={[Function]}
      onSelect={[Function]}
      selected={false}
      tabIndex={0}
      testId="cf-ui-tab"
    >
      <a
        className="Tab"
        data-test-id="cf-ui-tab"
        href="/first-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        First
      </a>
    </Tab>
    <Tab
      disabled={false}
      extraClassNames="super-tab"
      href="/second-link"
      id="second"
      onKeyPress={[Function]}
      onSelect={[Function]}
      selected={false}
      tabIndex={0}
      testId="cf-ui-tab"
    >
      <a
        className="Tab super-tab"
        data-test-id="cf-ui-tab"
        href="/second-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        Second
      </a>
    </Tab>
    <Tab
      disabled={false}
      href="/third-link"
      id="third"
      onKeyPress={[Function]}
      onSelect={[Function]}
      selected={false}
      tabIndex={0}
      testId="cf-ui-tab"
    >
      <a
        className="Tab"
        data-test-id="cf-ui-tab"
        href="/third-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        Third
      </a>
    </Tab>
  </nav>
</Tabs>
`;
